# rpmlint

./: .coveragerc  .cvsignore  .dir-locals.el  .dockerignore  .editorconfig  .gitignore  .packit.yaml  .pep8  .pre-commit-hooks.yaml  .travis.yml  AUTHORS  AbstractCheck.py  AllChecks.py  AppDataCheck.py  BinariesCheck.py  ChangeLog  Common.py  Config.py  ConfigCheck.py  DistributionCheck.py  DocFilesCheck.py  FHSCheck.py  FilesCheck.py  Filter.py  I18NCheck.py  INSTALL  InitScriptCheck.py  LSBCheck.py  MANIFEST.in  Makefile  MandrakeCheck.py  MenuCheck.py  MenuXDGCheck.py  NamingPolicyCheck.py  PamCheck.py  PermissionsCheck.py  Pkg.py  PostCheck.py  README  README.CVS  (+36 more)
.github/workflows/: codeql.yml  main.yml  release.yml
.packit/: rpmlint.spec
configs/Fedora/: fedora.toml  licenses.toml  users-groups.toml
configs/openSUSE/: cron-whitelist.toml  dbus-services.toml  device-files-whitelist.toml  licenses.toml  opensuse.toml  pam-modules.toml  permissions-whitelist.toml  pie-executables.toml  polkit-rules-whitelist.toml  scoring-strict.override.toml  scoring.toml  security.toml  sudoers-whitelist.toml  sysctl-whitelist.toml  systemd-tmpfiles.toml  users-groups.toml  varlink-whitelist.toml  world-writable-whitelist.toml  zypper-plugins.toml
man/: rpmlint.1
rpmlint/: AbstractCheck.py  AppDataCheck.py  BinariesCheck.py  Config.py  ConfigCheck.py  ConfigDefaults.py  DistributionCheck.py  DocFilesCheck.py  FHSCheck.py  FilesCheck.py  Filter.py  I18NCheck.py  InitScriptCheck.py  LSBCheck.py  MenuCheck.py  MenuXDGCheck.py  NamingPolicyCheck.py  PamCheck.py  Pkg.py  PostCheck.py  RpmFileCheck.py  Rpmdiff.py  SCLCheck.py  SignatureCheck.py  SourceCheck.py  SpecCheck.py  TagsCheck.py  ZipCheck.py  __init__.py  __isocodes__.py  arparser.py  cli.py  color.py  config.py  configdefaults.py  configdefaults.toml  configspec.cfg  filedigestcheck.py  filter.py  helpers.py  (+11 more)
rpmlint/checks/: AbstractCheck.py  Allowlisting.py  AlternativesCheck.py  AppDataCheck.py  AtomicUpdateCheck.py  BashismsCheck.py  BinariesCheck.py  BrandingPolicyCheck.py  BuildDateCheck.py  BuildRootAndDateCheck.py  BuildRootCheck.py  CheckDBUSServices.py  CheckForXinetd.py  ConfigCheck.py  ConfigFilesCheck.py  CronJobsCheck.py  DBusPolicyCheck.py  DBusServicesCheck.py  DeviceFilesCheck.py  DistributionCheck.py  DocCheck.py  DocFilesCheck.py  DuplicatesCheck.py  ErlangCheck.py  ExecDocCheck.py  FHSCheck.py  FileDigestCheck.py  FileMetadataCheck.py  FilelistCheck.py  FilelistCheck.toml  FilesCheck.py  I18NCheck.py  IconSizesCheck.py  InitScriptCheck.py  KMPPolicyCheck.py  LSBCheck.py  LibraryDependencyCheck.py  LogrotateCheck.py  MenuCheck.py  MenuXDGCheck.py  (+32 more)
scripts/: diff.py  lint.py  rpmdiff  rpmlint  rpmlint.py
test/: Dockerfile-centos6  Dockerfile-centos7  Dockerfile-fedora24  Dockerfile-fedora26  Dockerfile-fedora28  Dockerfile-fedora29  Dockerfile-fedora30  Dockerfile-fedora31  Dockerfile-fedora32  Dockerfile-fedora33  Dockerfile-fedoradev  Dockerfile-leap15  Dockerfile-leap423  Dockerfile-opensuselp15  Dockerfile-opensusetw  Dockerfile-tumbleweed  Dockerfile-ubuntu14  README.md  SpecCheck.spec  SpecCheck2.spec  SpecCheck3.spec  Testing.py  docker-script.sh  dump_stats.py  generate-isocodes.py  mock_packages.py  noarch-sub.spec  test.CheckInclude.py  test.DocFilesCheck.py  test.PamCheck.py  test.Pkg.py  test.SpecCheck.py  test.SpecCheck2.py  test.SpecCheck3.py  test.config  test_FHS.py  test_LSB.py  test_alternatives.py  test_appdata.py  test_atomic_update.py  (+69 more)
test/configs/: broken.config  (+21 more)
tools/: Testing.py  compile.py  generate-fedora-users-groups.py  generate-isocodes.py  generate-suse-licenses.py  get_whitelisting_digest.py
(+440 files in other folders)
