[metadata]
license_file = COPYING

[aliases]
test=pytest

[flake8]
ignore = E122,E501,H101,H105,H201,H301,H404,H405,B001,W504
import-order-style = google
application-import-names = __isocodes__,__version__,AbstractCheck,AppDataCheck,BinariesCheck,Config,ConfigCheck,DistributionCheck,DocFilesCheck,FHSCheck,FilesCheck,Filter,I18NCheck,InitScriptCheck,LSBCheck,MenuCheck,MenuXDGCheck,NamingPolicyCheck,PamCheck,Pkg,PostCheck,RpmFileCheck,SCLCheck,SignatureCheck,SourceCheck,SpecCheck,TagsCheck,ZipCheck,Testing

[tool:pytest]
addopts = --flake8 --cov=rpmlint
