[metadata]
license_file = COPYING

[aliases]
test=pytest

[flake8]
# Fix the N806 and N802 offenders diff.py lint.py pkg.py
# Fix the N812 when cleaning the checks
ignore = E122,E501,W504,N806,N802,N812
import-order-style = google
application-import-names = Testing

[tool:pytest]
addopts = -vv --cov=rpmlint -n auto
